tag-1.4.3 20220211
  - Replace last_month_users with returning users

tag-1.4.2 20220210
  - Change daily summary to include 3 full months, starting 4 months ago through last month

tag-1.4.1 20220209
  - Fix refresh_materialized_views.sql syntax

tag-1.4.0 20220206
  - Redesign materialized views to track last usage and user turnover

tag-1.3.7 20220121
  - Remove accidental cruft in refresh_materialized_views

tag-1.3.6 20220121
  - Fix refresh all materialized views

tag-1.3.5 20220121
  - Finish disabling hourly views

tag-1.3.4 20220119
  - More materialized view refinement, consolidate sum_usage2_* into sum_usage_*

tag-1.3.3 20220114
  - Introduce user+client materialized views

tag-1.3.2 20211213
  - Write use_user to the database by adding it to the cols list

tag-1.3.1 20211213
  - Set unknown/anonymous use_user values when the input doesn't have it

tag-1.3.0 20211210
  - Standarize unknown/anonymous use_user values