@@ -1,3 +1,6 @@
+tag-1.4.4 20220423
+  - Fix and improve timezone handling
+
 tag-1.4.3 20220211
   - Replace last_month_users with returning users
 
